# goMonitor

./: .gitignore  README.md
agent/: config.ini
agent/src/mainServer/: main.go
agent/src/mainServer/config/: config.go
agent/src/mainServer/dataEntity/: entity.go
agent/src/mainServer/filter/: logSystemInfoFilter.go  machineRecordFilter.go  sendToSparkFilter.go  systemInfoFilter.go
agent/src/mainServer/handler/: filterHandler.go  networkHandler.go
agent/src/mainServer/message/: logSendAlertHelper.go  sendAlertHelper.go
agent/src/mainServer/persist/: machineRecord.go  systemInfo.go
agent/src/mainServer/persist/mongodb/: mongodbSystemInfo.go
agent/src/mainServer/persist/mysql/: mysqlMachineRecord.go
agent/src/mainServer/service/: collectSystemService.go  heartbeatService.go
agent/src/mainServer/utils/: utils.go
agent/src/monitorAgent/: config.go  main.go  systemInfo.go
agent/src/monitorAgent/config/: config.go
agent/src/utils/: config.go  iocContainter.go  socket.go  systemInfo.go
cppAgent/: CMakeLists.txt  Makefile  README.md  config.ini  log4cpp.conf
cppAgent/include/utils/: config.h
cppAgent/monitorAgent/: CMakeLists.txt  Makefile  main.cpp
cppAgent/monitorAgent/include/: monitorAgent.h  processinfo.h  systeminfo.h  systeminfo2.h  utils.h
cppAgent/monitorAgent/src/: main.cpp  monitorAgent.cpp  processinfo.cpp  systeminfo.cpp  systeminfo2.cpp  utils.cpp
cppAgent/utils/: CMakeLists.txt  Makefile
cppAgent/utils/include/: config.h  data.h
cppAgent/utils/src/: data.cpp  iniConfig.cpp
doc/: goMonitor.xmind  goMonitorFunctions.xmind
docker/monitor-mysql/: Dockerfile  docker-entrypoint.sh
docker/spark-node/: Dockerfile  docker-entrypoint.sh
spark/: pom.xml  run.sh
spark/src/main/java/com/phospher/goMonitor/aggregator/: SystemInfoAggregator.java
spark/src/main/java/com/phospher/goMonitor/configuration/: ConfigProvider.java
spark/src/main/java/com/phospher/goMonitor/data/: MachineRecordRepository.java  SystemInfoRepository.java
spark/src/main/java/com/phospher/goMonitor/entities/: AverageItem.java  DatePersister.java  MachineAnalysisResult.java  MachineRecord.java  MySqlEntity.java  ProcessInfo.java  SystemInfo.java
spark/src/main/java/com/phospher/goMonitor/inject/: InjectorManager.java  (+1 more)
sparkDaily/: pom.xml
sparkDaily/src/main/java/com/phospher/sparkDaily/: App.java
sparkDaily/src/test/java/com/phospher/sparkDaily/: AppTest.java
web/: .env  composer.json  index.html
web/app/: SystemInfo.php
web/app/Contracts/: SystemInfoRepository.php
web/app/Http/: routes.php
web/app/Http/Controllers/: SystemInfoController.php
web/app/Http/Controllers/Auth/: AuthController.php
web/app/Providers/: AppServiceProvider.php
web/app/Services/: MongoSystemInfoRepository.php
web/config/: app.php  database.php
web/js/: index.js
web/lib/ui-grid/: ui-grid.min.css
web/public/css/: index.css
web/public/css/auth/: login.css  register.css
web/public/js/: index.js  systemInfo.detail.js
web/public/js/auth/: login.js  register.js
web/resources/lang/en/: validation.php
web/resources/views/: index.blade.php
web/resources/views/auth/: login.blade.php  register.blade.php
web/resources/views/layouts/: layout.blade.php
web/resources/views/systemInfo/: detail.blade.php
(+20 files in other folders)
