CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(monitorAgent)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/../include)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/)
SET(SRC_FILE ${SRC_DIR}main.cpp ${SRC_DIR}monitorAgent.cpp)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib)
ADD_EXECUTABLE(monitorAgent ${SRC_FILE})
TARGET_LINK_LIBRARIES(monitorAgent libutils.a)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)
INSTALL(TARGETS monitorAgent
    RUNTIME DESTINATION bin)