CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(utils)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/../include)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/)
SET(SRC_FILE ${SRC_DIR}iniConfig.cpp)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(utils STATIC ${SRC_FILE})
TARGET_LINK_LIBRARIES(utils ConvertUTF.o)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)
INSTALL(TARGETS utils
    ARCHIVE DESTINATION lib)
INSTALL(FILES include/config.h DESTINATION include/utils)