CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/)
SET(SRC_FILE ${SRC_DIR}iniConfig.cpp ${SRC_DIR}data.cpp)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/..)
SET(HEAD_FILES include/config.h include/data.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(utils STATIC ${SRC_FILE})
TARGET_LINK_LIBRARIES(utils ConvertUTF.o)

ADD_CUSTOM_COMMAND(TARGET utils
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_SOURCE_DIR}/include/utils
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h ${PROJECT_SOURCE_DIR}/include/utils/)